--- a/debian/control
+++ b/debian/control
@@ -1,16 +1,15 @@
 Source: hifi-scribe
+Section: unknown
 Priority: optional
 Maintainer: Seth Alves <seth.alves@gmail.com>
 Build-Depends: debhelper (>= 11)
 Standards-Version: 4.1.3
-Section: libs
 Homepage: <insert the upstream URL, if relevant>
 Vcs-Browser: https://github.com/highfidelity/scribe
 Vcs-Git: https://github.com/highfidelity/scribe.git
 
 Package: hifi-scribe
 Architecture: any
-Multi-Arch: same
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: <insert up to 60 chars description>
  <insert long description, indented with spaces>
