--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Seth Alves <seth.alves@gmail.com>
 Build-Depends: debhelper (>= 11)
 Standards-Version: 4.1.3
-Homepage: <insert the upstream URL, if relevant>
+Homepage: https://github.com/highfidelity/scribe
 Vcs-Browser: https://github.com/highfidelity/scribe
 Vcs-Git: https://github.com/highfidelity/scribe.git
 
