--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,4 +15,4 @@ add_executable(scribe ${TARGET_SRCS})
 if (WIN32)
     set_property(TARGET scribe APPEND_STRING PROPERTY LINK_FLAGS_DEBUG "/OPT:NOREF /OPT:NOICF")
 endif()
-install(TARGETS scribe RUNTIME DESTINATION tools)
+install(TARGETS scribe RUNTIME DESTINATION bin)
